// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Topbar -  logo prevents default when clicked 1`] = `
<header
  className="topbar"
>
  

  

   
  <a
    className="topbar-logo"
    href="#"
    onClick={[Function]}
  />
  

</header>
`;

exports[`Component: Topbar -  menu links prevents default when clicked 1`] = `
<Topbar
  topbarContent={
    Object {
      "btn": Object {
        "icon": "menu",
        "name": "Menu",
      },
      "items": Array [
        Object {
          "icon": "home",
          "name": "Home",
        },
        Object {
          "icon": "shopping_cart",
          "name": "Purchase history",
        },
        Object {
          "icon": "settings",
          "name": "Settings",
        },
      ],
    }
  }
>
  <header
    className="topbar"
  >
    

    <TopbarBtn
      icon="menu"
      text="Menu"
    >
      <button
        className="topbar-menu-button"
        type="button"
      >
        
		
        <i
          className="material-icons topbar-menu-icon"
        >
          menu
        </i>
        
		
      </button>
    </TopbarBtn>
    

    

    <a
      className="topbar-logo"
      href="#"
      onClick={[Function]}
    />
    

    <TopbarMenu
      logout={false}
      menu={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    >
      <nav
        className="topbar-nav"
      >
        <div
          className="topbar-link-container"
        >
          

          <i
            className="material-icons close-topbar-nav"
          >
            close
          </i>
          

          <a
            className="active"
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              home
            </i>
            

            <span>
              Home
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              shopping_cart
            </i>
            

            <span>
              Purchase history
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              settings
            </i>
            

            <span>
              Settings
            </span>
            

          </a>
          

        </div>
      </nav>
    </TopbarMenu>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  renders a topbar with only a clickable logo 1`] = `
<header
  className="topbar"
>
  

  

   
  <a
    className="topbar-logo"
    href="#"
    onClick={[Function]}
  />
  

</header>
`;

exports[`Component: Topbar -  renders a topbar-menu-button when content is provided 1`] = `
<Topbar
  topbarContent={
    Object {
      "btn": Object {
        "icon": "menu",
        "name": "Menu",
      },
      "items": Array [
        Object {
          "icon": "home",
          "name": "Home",
        },
        Object {
          "icon": "shopping_cart",
          "name": "Purchase history",
        },
        Object {
          "icon": "settings",
          "name": "Settings",
        },
      ],
    }
  }
>
  <header
    className="topbar"
  >
    

    <TopbarBtn
      icon="menu"
      text="Menu"
    >
      <button
        className="topbar-menu-button"
        type="button"
      >
        
		
        <i
          className="material-icons topbar-menu-icon"
        >
          menu
        </i>
        
		
      </button>
    </TopbarBtn>
    

    

    <a
      className="topbar-logo"
      href="#"
      onClick={[Function]}
    />
    

    <TopbarMenu
      logout={false}
      menu={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    >
      <nav
        className="topbar-nav"
      >
        <div
          className="topbar-link-container"
        >
          

          <i
            className="material-icons close-topbar-nav"
          >
            close
          </i>
          

          <a
            className="active"
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              home
            </i>
            

            <span>
              Home
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              shopping_cart
            </i>
            

            <span>
              Purchase history
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              settings
            </i>
            

            <span>
              Settings
            </span>
            

          </a>
          

        </div>
      </nav>
    </TopbarMenu>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  renders logout link and adds topbar-link-right to the logout 1`] = `
<header
  className="topbar"
>
  

  

   
  <a
    className="topbar-logo"
    href="#"
    onClick={[Function]}
  />
  

  <a
    className="topbar-link-right"
    href="#"
    onClick={[Function]}
  >
    

    <i
      className="material-icons"
    >
      exit_to_app
    </i>
    

    <span>
      Log out
    </span>
    

  </a>
  

</header>
`;

exports[`Component: Topbar -  renders topbar-link-container and a logout link 1`] = `
<Topbar
  logout={true}
  topbarContent={
    Object {
      "btn": Object {
        "icon": "menu",
        "name": "Menu",
      },
      "items": Array [
        Object {
          "icon": "home",
          "name": "Home",
        },
        Object {
          "icon": "shopping_cart",
          "name": "Purchase history",
        },
        Object {
          "icon": "settings",
          "name": "Settings",
        },
      ],
    }
  }
>
  <header
    className="topbar"
  >
    

    <TopbarBtn
      icon="menu"
      text="Menu"
    >
      <button
        className="topbar-menu-button"
        type="button"
      >
        
		
        <i
          className="material-icons topbar-menu-icon"
        >
          menu
        </i>
        
		
      </button>
    </TopbarBtn>
    

    

    <a
      className="topbar-logo"
      href="#"
      onClick={[Function]}
    />
    

    <TopbarMenu
      logout={true}
      menu={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    >
      <nav
        className="topbar-nav"
      >
        <div
          className="topbar-link-container"
        >
          

          <i
            className="material-icons close-topbar-nav"
          >
            close
          </i>
          

          <a
            className="active"
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              home
            </i>
            

            <span>
              Home
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              shopping_cart
            </i>
            

            <span>
              Purchase history
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              settings
            </i>
            

            <span>
              Settings
            </span>
            

          </a>
          

          <a
            className="topbar-link-right"
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              exit_to_app
            </i>
            

            <span>
              Log out
            </span>
            

          </a>
          

        </div>
      </nav>
    </TopbarMenu>
  </header>
</Topbar>
`;

exports[`Component: Topbar -  renders topbar-link-container and populates it with given information without a logout link 1`] = `
<Topbar
  topbarContent={
    Object {
      "btn": Object {
        "icon": "menu",
        "name": "Menu",
      },
      "items": Array [
        Object {
          "icon": "home",
          "name": "Home",
        },
        Object {
          "icon": "shopping_cart",
          "name": "Purchase history",
        },
        Object {
          "icon": "settings",
          "name": "Settings",
        },
      ],
    }
  }
>
  <header
    className="topbar"
  >
    

    <TopbarBtn
      icon="menu"
      text="Menu"
    >
      <button
        className="topbar-menu-button"
        type="button"
      >
        
		
        <i
          className="material-icons topbar-menu-icon"
        >
          menu
        </i>
        
		
      </button>
    </TopbarBtn>
    

    

    <a
      className="topbar-logo"
      href="#"
      onClick={[Function]}
    />
    

    <TopbarMenu
      logout={false}
      menu={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    >
      <nav
        className="topbar-nav"
      >
        <div
          className="topbar-link-container"
        >
          

          <i
            className="material-icons close-topbar-nav"
          >
            close
          </i>
          

          <a
            className="active"
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              home
            </i>
            

            <span>
              Home
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              shopping_cart
            </i>
            

            <span>
              Purchase history
            </span>
            

          </a>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons"
            >
              settings
            </i>
            

            <span>
              Settings
            </span>
            

          </a>
          

        </div>
      </nav>
    </TopbarMenu>
  </header>
</Topbar>
`;
